# Gemt

./: .gitignore  pyproject.toml  汇总月薪.bat
publish/: embedded.py
src/: excel_helper.py  gather_all_salary.py
