[tool.poetry]
name = "gemt"
version = "0.1.0"
description = ""
authors = ["Mango"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
